# rust_mandelbrot

./: Cargo.toml  README.md
src/: app_args.rs  lib.rs  main.rs
