[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
clap = { version = "4.5.1", features = ["derive"] }
image = "0.24.9"
anyhow = "1.0.80"
rayon = "1.8.1"
mimalloc = "0.1.39"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
itertools = "0.12.1"